# cpp-patterns

./: CMakeLists.txt  README.md
cmake-samples/: CMakeLists.txt  README.md
cmake-samples/cmake-samples/: CMakeLists.txt  README.md
cmake-samples/cmake-samples/01-hello-cmake/: CMakeLists.txt  README.md
cmake-samples/cmake-samples/02-hello-headers/: CMakeLists.txt  README.md
cmake-samples/cmake-samples/03-static-library/: CMakeLists.txt  README.md
cmake-samples/cmake-samples/04-shared-library/: CMakeLists.txt  README.md
cmake-samples/cmake-samples/05-installing/: CMakeLists.txt  README.md
cmake-samples/cmake-samples/06-build-type/: CMakeLists.txt  README.md
cmake-samples/cmake-samples/07-compile-flags/: CMakeLists.txt  README.md
cmake-samples/cmake-samples/08-third-party-library/: CMakeLists.txt  README.md
cmake-samples/cmake-samples/09-compiling-with-clang/: CMakeLists.txt  README.md  run_test.sh
cmake-samples/cmake-samples/10-building-with-ninja/: CMakeLists.txt  README.md
cmake-samples/cmake-samples/11-imported-targets/: CMakeLists.txt  README.md
cmake-samples/cmake-samples/12-cpp-standard/: CMakeLists.txt  README.md
cmake-samples/cmake-samples/12-cpp-standard/i-common-method/: CMakeLists.txt  README.md
cmake-samples/cmake-samples/12-cpp-standard/ii-cxx-standard/: CMakeLists.txt  README.md
cmake-samples/cmake-samples/12-cpp-standard/iii-compile-features/: CMakeLists.txt  README.md
cmake-samples/packaging-demo/: CMakeLists.txt  README.md
cmake-samples/sub-projects/: CMakeLists.txt  README.md
cmake-samples/sub-projects/basic/: CMakeLists.txt  README.md
cmake-samples/sub-projects/basic/subbinary/: CMakeLists.txt
cmake-samples/sub-projects/basic/sublibrary1/: CMakeLists.txt
cmake-samples/sub-projects/basic/sublibrary2/: CMakeLists.txt
design-patterns-cpp/: CMakeLists.txt  README.md
design-patterns-cpp/solid-cpp/: README.md
design-patterns-cpp/structural-cpp/: CMakeLists.txt  README.md
design-patterns-cpp/structural-cpp/adapter/: CMakeLists.txt
design-patterns-cpp/structural-cpp/adapter/stack/: CMakeLists.txt
design-patterns-cpp/structural-cpp/adapter/string/: CMakeLists.txt
design-patterns-cpp/structural-cpp/bridge/: CMakeLists.txt
design-patterns-cpp/structural-cpp/bridge/pimplIdiom/: CMakeLists.txt  Person.cpp
design-patterns-cpp/structural-cpp/bridge/shapeSizing/: CMakeLists.txt
design-patterns-cpp/structural-cpp/composite/: CMakeLists.txt
design-patterns-cpp/structural-cpp/composite/geometricShapes/: CMakeLists.txt
design-patterns-cpp/structural-cpp/composite/objectCompositionAndIteration/: CMakeLists.txt
design-patterns-cpp/structural-cpp/decorator/: CMakeLists.txt
design-patterns-cpp/structural-cpp/decorator/functionDecorator/: CMakeLists.txt
design-patterns-cpp/structural-cpp/decorator/mixinInheritance/: CMakeLists.txt
design-patterns-cpp/structural-cpp/decorator/usabilityImprovements/: CMakeLists.txt
design-patterns-cpp/structural-cpp/decorator/wrappingDecorator/: CMakeLists.txt
design-patterns-cpp/structural-cpp/façade/: CMakeLists.txt
design-patterns-cpp/structural-cpp/façade/bloom/: CMakeLists.txt  ShaderUtils.h  TextRenderer.h
design-patterns-cpp/structural-cpp/flyweight/: CMakeLists.txt
design-patterns-cpp/structural-cpp/nullObject/: CMakeLists.txt
design-patterns-cpp/structural-cpp/proxy/: CMakeLists.txt
design-patterns-cpp/structural-cpp/proxy/communicationProxy/: CMakeLists.txt  communicationProxy.cpp
design-patterns-cpp/structural-cpp/proxy/smartPointerProxy/: CMakeLists.txt
design-patterns-cpp/structural-cpp/proxy/virtualProxy/: CMakeLists.txt
