cmake_minimum_required(VERSION 3.12)
project(structural-cpp)

set(CMAKE_CXX_STANDARD 17)

# Structural Design Patterns
add_subdirectory(adapter)
add_subdirectory(bridge)
add_subdirectory(composite)
add_subdirectory(decorator)
add_subdirectory(façade)
add_subdirectory(flyweight)
add_subdirectory(nullObject)
add_subdirectory(proxy)

